Fixed footer layout issues (quick fix)

--- a/TrashMob/client-app/src/App.scss
+++ b/TrashMob/client-app/src/App.scss
@@ -229,6 +229,7 @@ footer {
   padding: 2em 1.5em 1.5em;
   font-size: 80%;
   clear: both;
+  text-align: center;
 }
 
 footer p {
@@ -237,6 +238,12 @@ footer p {
 
 footer a {
   color: white;
+  text-decoration: none;
+}
+
+footer img {
+  all: inherit;
+  max-width: 20px;
 }
 
 footer a:hover {
@@ -244,10 +251,33 @@ footer a:hover {
   text-decoration: underline;
 }
 
+footer iframe.twitter-follow-button {
+  margin-right: 3px !important;
+}
+
+footer a.instagram-button,
 footer p a {
   display: inline-block;
   padding: 4px 10px 4px 10px;
   text-decoration: none;
+}
+
+footer a.instagram-button {
+  height: 20px;
+  vertical-align: top;
+  line-height: 100%;
+  font-weight: bold;
+  font-size: 0.9em;
+}
+
+footer iframe,
+footer span,
+footer div {
+  line-height: 100%;
+  margin: 0px;
+  padding: 0px;
+  height: 20px !important;
+  overflow: hidden;
 }
 
 .carousel-inner,
